Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Curso Gratis</h1>
         </header>
         <article>
-            <h2>Artgo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML e CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores dolore vero minima id odio. Deleniti blanditiis odit maiores accusamus, dolores voluptatem assumenda magnam quis praesentium laudantium quod quas ullam in.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de Java Script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, iure. Excepturi provident velit ab maxime delectus beatae ad porro optio nobis nihil impedit eum, necessitatibus aliquam a! Repellendus, facere dolorem!</p>
         </article>
     </main>
 </body>
