--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Curso Gratis</h1>
+            <img src="Imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML e CSS3</h2>
+            <img class="lado" src="Imagens/curso-html-css.png" alt="Curso de HTML">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores dolore vero minima id odio. Deleniti blanditiis odit maiores accusamus, dolores voluptatem assumenda magnam quis praesentium laudantium quod quas ullam in.</p>
+            <p><a href="curso-html.html">Acesso o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Java Script</h2>
+            <img class="lado" src="Imagens/curso-javascript.png" alt="Curso de JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, iure. Excepturi provident velit ab maxime delectus beatae ad porro optio nobis nihil impedit eum, necessitatibus aliquam a! Repellendus, facere dolorem!</p>
+            <P><a href="curso-js.html">Acesse o curso de JavaScript</a></P>
         </article>
     </main>
 </body>
